; ModuleID = '/home/carl/AnghaBench/curl/docs/examples/extr_debug.c_my_trace.c'
source_filename = "/home/carl/AnghaBench/curl/docs/examples/extr_debug.c_my_trace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.data = type { i32 }

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [12 x i8] c"== Info: %s\00", align 1
@.str.1 = private unnamed_addr constant [15 x i8] c"=> Send header\00", align 1
@.str.2 = private unnamed_addr constant [13 x i8] c"=> Send data\00", align 1
@.str.3 = private unnamed_addr constant [17 x i8] c"=> Send SSL data\00", align 1
@.str.4 = private unnamed_addr constant [15 x i8] c"<= Recv header\00", align 1
@.str.5 = private unnamed_addr constant [13 x i8] c"<= Recv data\00", align 1
@.str.6 = private unnamed_addr constant [17 x i8] c"<= Recv SSL data\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i8*, i64, i8*)* @my_trace to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @my_trace(i32* %0, i32 %1, i8* %2, i64 %3, i8* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i8*, align 8
  %12 = alloca %struct.data*, align 8
  %13 = alloca i8*, align 8
  store i32* %0, i32** %7, align 8
  store i32 %1, i32* %8, align 4
  store i8* %2, i8** %9, align 8
  store i64 %3, i64* %10, align 8
  store i8* %4, i8** %11, align 8
  %14 = load i8*, i8** %11, align 8
  %15 = bitcast i8* %14 to %struct.data*
  store %struct.data* %15, %struct.data** %12, align 8
  %16 = load i32*, i32** %7, align 8
  %17 = load i32, i32* %8, align 4
  switch i32 %17, label %22 [
    i32 128, label %18
    i32 131, label %23
    i32 133, label %24
    i32 129, label %25
    i32 132, label %26
    i32 134, label %27
    i32 130, label %28
  ]

18:                                               ; preds = %5
  %19 = load i32, i32* @stderr, align 4
  %20 = load i8*, i8** %9, align 8
  %21 = call i32 @fprintf(i32 %19, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i8* %20)
  br label %22

22:                                               ; preds = %5, %18
  store i32 0, i32* %6, align 4
  br label %38

23:                                               ; preds = %5
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i8** %13, align 8
  br label %29

24:                                               ; preds = %5
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0), i8** %13, align 8
  br label %29

25:                                               ; preds = %5
  store i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.3, i64 0, i64 0), i8** %13, align 8
  br label %29

26:                                               ; preds = %5
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.4, i64 0, i64 0), i8** %13, align 8
  br label %29

27:                                               ; preds = %5
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.5, i64 0, i64 0), i8** %13, align 8
  br label %29

28:                                               ; preds = %5
  store i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.6, i64 0, i64 0), i8** %13, align 8
  br label %29

29:                                               ; preds = %28, %27, %26, %25, %24, %23
  %30 = load i8*, i8** %13, align 8
  %31 = load i32, i32* @stderr, align 4
  %32 = load i8*, i8** %9, align 8
  %33 = load i64, i64* %10, align 8
  %34 = load %struct.data*, %struct.data** %12, align 8
  %35 = getelementptr inbounds %struct.data, %struct.data* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = call i32 @dump(i8* %30, i32 %31, i8* %32, i64 %33, i32 %36)
  store i32 0, i32* %6, align 4
  br label %38

38:                                               ; preds = %29, %22
  %39 = load i32, i32* %6, align 4
  ret i32 %39
}

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

declare dso_local i32 @dump(i8*, i32, i8*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
